# 3d

./: CMakeLists.txt
src/: common_headers.hpp  main.cpp
src/core/feature/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  InputHandler.cpp  InputHandler.hpp  ProjectsManager.cpp  ProjectsManager.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/core/feature/camera/: camera.cpp  camera.h
src/core/feature/renderer/: renderer.cpp  renderer.h
src/core/feature/scene/: scene.cpp  scene.h
src/core/objects/: Cube.cpp  Cube.hpp  CustomShape.cpp  CustomShape.hpp  GridPlane.cpp  GridPlane.hpp  Ground.hpp  Object3d.cpp  Object3d.hpp  ObjectsFactory.cpp  ObjectsFactory.hpp  Sphere.cpp  Sphere.hpp
src/core/objects/cube/: cube.cpp  cube.h
src/core/objects/sphere/: sphere.cpp  sphere.h
src/core/ui/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Component.cpp  Component.hpp  Container.cpp  Container.hpp  Expandable.cpp  Expandable.hpp  Icon.cpp  Icon.hpp  Input.cpp  Input.hpp  NumberInput.cpp  NumberInput.hpp  ScrollView.cpp  ScrollView.hpp  Select.cpp  Select.hpp  Slider.cpp  Slider.hpp  Snackbar.cpp  Snackbar.hpp  Surface.cpp  Surface.hpp  Text.cpp  Text.hpp
src/core/ui/button/: button.cpp  button.h
src/core/ui/input/: input.cpp
src/core/ui/text/: text.cpp
src/utils/: AABB.hpp  FontManager.cpp  FontManager.hpp  Frustum.cpp  Frustum.hpp  LanguageManager.cpp  LanguageManager.hpp  LanguagePacks.json  Matrix4.hpp  Object3d.hpp  Plane.hpp  RgbaColor.hpp  Vector3.hpp  Vector4.hpp  WindowManager.cpp  WindowManager.hpp  ZBuffer.cpp  ZBuffer.hpp
src/utils/files/: Config.cpp  Config.hpp  FileManager.cpp  FileManager.hpp  FileType.cpp  FileType.hpp  JsonFile.cpp  JsonFile.hpp  MtlFile.cpp  MtlFile.hpp  ObjFile.cpp  ObjFile.hpp  PrjFile.cpp  PrjFile.hpp  TomlFile.cpp  TomlFile.hpp
src/utils/math/: Matrix4.cpp  Matrix4.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
src/views/: EditorView.cpp  EditorView.hpp  HomeView.cpp  HomeView.hpp  ProjectsView.cpp  ProjectsView.hpp  SettingsView.cpp  SettingsView.hpp  View.cpp  View.hpp  ViewsManager.cpp  ViewsManager.hpp  viewSwitcher.cpp  viewSwitcher.hpp
src/views/editor-menu/: AddObjectsMenu.cpp  AddObjectsMenu.hpp  FacesMenu.cpp  FacesMenu.hpp  Menu.cpp  Menu.hpp  MenuManager.cpp  MenuManager.hpp  ObjectsMenu.cpp  ObjectsMenu.hpp  ProjectSettings.cpp  ProjectSettings.hpp  VerticesMenu.cpp  VerticesMenu.hpp
